Ticket #28897: Allow to include context for optional import.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7743,6 +7743,8 @@ com.top_logic.model.instance.importer.schema.GlobalRefConf.id = ID
 com.top_logic.model.instance.importer.schema.GlobalRefConf.id.tooltip = Identifier of the object being referenced. <p> The syntax of the identifier depends on the <i>instance resolver</i> used to create this ID and may vary from type to type. </p>
 com.top_logic.model.instance.importer.schema.GlobalRefConf.kind = Kind
 com.top_logic.model.instance.importer.schema.GlobalRefConf.kind.tooltip = The <i>instance resolver</i> kind the <i>ID</i> is made for.
+com.top_logic.model.instance.importer.schema.GlobalRefConf.local-id = Local ID
+com.top_logic.model.instance.importer.schema.GlobalRefConf.local-id.tooltip = When set, defines the ID to reference the same object locally during the same import. <p> Setting this property makes resolving the same object multiple times more efficient during re-import. </p>
 com.top_logic.model.instance.importer.schema.GlobalRefConf.tooltip = Reference to a pre-existing instance in the target application of an import.
 com.top_logic.model.instance.importer.schema.InstanceRefConf = Instance reference conf
 com.top_logic.model.instance.importer.schema.InstanceRefConf.id = ID
@@ -7755,6 +7757,8 @@ com.top_logic.model.instance.importer.schema.ModelRefConf.tooltip = Reference to
 com.top_logic.model.instance.importer.schema.ObjectConf = Object conf
 com.top_logic.model.instance.importer.schema.ObjectConf.attributes = Attributes
 com.top_logic.model.instance.importer.schema.ObjectConf.attributes.tooltip = Attributes to set on the imported object.
+com.top_logic.model.instance.importer.schema.ObjectConf.global-id = Global ID
+com.top_logic.model.instance.importer.schema.ObjectConf.global-id.tooltip = A global ID for the exported object. <p> Setting this property marks this exported object as fallback. During re-import, the object is only allocated, if there is not yet an object identified by the given global ID in the target system. If the given global ID can be resolved in the target system, this object is used instead of the exported one. </p>
 com.top_logic.model.instance.importer.schema.ObjectConf.id = ID
 com.top_logic.model.instance.importer.schema.ObjectConf.id.tooltip = Optional import-local identifier that is used to reference this object from references of other objects that are imported.
 com.top_logic.model.instance.importer.schema.ObjectConf.tooltip = Import description of a single new object to create. <p> The object configuration can either occur top-level or within a composition reference to be exported as part of another object. </p>
