Ticket #28765: Added support for dimension annotation as max for image.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7403,8 +7403,8 @@ com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM.toolt
 com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD = Bild Drop-Feld
 com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD.tooltip = Anzeige als Feld zum Hochladen per Klick oder Drop und Darstellung des hochgeladenen Bildes.
 com.top_logic.model.annotate.ui.BinaryDisplay.tooltip = Anzeige-Einstellungen für ein Attribut, das Binärdaten enthält und das Hochladen von Dateien erlaubt.
-com.top_logic.model.annotate.ui.BinaryDisplay.value = Darstellung
-com.top_logic.model.annotate.ui.BinaryDisplay.value.tooltip = Wie Sie dieses Attribut standardmäßig anzeigen können.
+com.top_logic.model.annotate.ui.BinaryDisplay.presentation = Darstellung
+com.top_logic.model.annotate.ui.BinaryDisplay.presentation.tooltip = Wie Sie dieses Attribut standardmäßig anzeigen können.
 com.top_logic.model.annotate.ui.BooleanDisplay = Boolesche Anzeige
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation = Präsentation
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation.tooltip = Wie Sie dieses Attribut standardmäßig anzeigen können.
