--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7403,8 +7403,8 @@ com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM.toolt
 com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD = Image drop field
 com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD.tooltip = Display as field to upload via click or drop and display of the uploaded image.
 com.top_logic.model.annotate.ui.BinaryDisplay.tooltip = Display settings for an attribute, that contains binary data and allows the upload of files.
-com.top_logic.model.annotate.ui.BinaryDisplay.value = Presentation
-com.top_logic.model.annotate.ui.BinaryDisplay.value.tooltip = How to display this attribute by default.
+com.top_logic.model.annotate.ui.BinaryDisplay.presentation = Presentation
+com.top_logic.model.annotate.ui.BinaryDisplay.presentation.tooltip = How to display this attribute by default.
 com.top_logic.model.annotate.ui.BooleanDisplay = Boolean display
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation = Presentation
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation.tooltip = How to display this attribute by default.
