Ticket #28891: Implement with() function for TLScript
- create documentation and test script

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -619,6 +619,8 @@ com.top_logic.model.search.expr.config.operations.Type$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.Type$Builder.tooltip = <i>Method Builder</i> erstellt <i>Typ</i>.
 com.top_logic.model.search.expr.config.operations.UnionBuilder = Gewerkschaftserrichter
 com.top_logic.model.search.expr.config.operations.UnionBuilder.tooltip = <i>Methodenbauer, der</i> <i>Gewerkschaften</i> gründet.
+com.top_logic.model.search.expr.config.operations.With$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.With$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> <i>mit</i> Ausdrücken.
 com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Get-App-Konfigurationen</i>.
 com.top_logic.model.search.expr.config.operations.app.GetDBConfig$Builder = Ersteller
