--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -619,6 +619,8 @@ com.top_logic.model.search.expr.config.operations.Type$Builder = Builder
 com.top_logic.model.search.expr.config.operations.Type$Builder.tooltip = <i>Method builder</i> creating <i>type</i>.
 com.top_logic.model.search.expr.config.operations.UnionBuilder = Union builder
 com.top_logic.model.search.expr.config.operations.UnionBuilder.tooltip = <i>Method builder</i> creating <i>unions</i>.
+com.top_logic.model.search.expr.config.operations.With$Builder = Builder
+com.top_logic.model.search.expr.config.operations.With$Builder.tooltip = <i>Method builder</i> creating <i>with</i> expressions.
 com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder = Builder
 com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder.tooltip = <i>Method builder</i> creating <i>get app configuration</i>.
 com.top_logic.model.search.expr.config.operations.app.GetDBConfig$Builder = Builder
