Ticket #28765: Fixed MissingResource and multiple comments errors.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -131,6 +131,7 @@ class.com.top_logic.layout.form.control.I18NConstants.MEGAMENU_OPTION_SELECTED.h
 class.com.top_logic.layout.form.control.I18NConstants.OPEN_CLOCK_COMMAND = Öffnet eine Uhr.
 class.com.top_logic.layout.form.control.I18NConstants.OPEN_MEGA_MENU = Öffnen des Mega-Menü-Pop-ups.
 class.com.top_logic.layout.form.control.I18NConstants.SET_VALUE_CLOSE_POPUP = Legt die Auswahl fest und schließt das Mega-Menü-Pop-up.
+class.com.top_logic.layout.form.control.I18NConstants.UPDATE_IMAGE_COMMAND = Aktualisiert das Bild
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_COMPLETED_COMMAND = Rückruf nach Upload
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL = Datei auswählen
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL.tooltip = Öffnet die Dateiauswahl zum Hochladen einer Datei.
