--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -131,6 +131,7 @@ class.com.top_logic.layout.form.control.I18NConstants.MEGAMENU_OPTION_SELECTED.h
 class.com.top_logic.layout.form.control.I18NConstants.OPEN_CLOCK_COMMAND = Opens a clock.
 class.com.top_logic.layout.form.control.I18NConstants.OPEN_MEGA_MENU = Opening the mega menu pop up.
 class.com.top_logic.layout.form.control.I18NConstants.SET_VALUE_CLOSE_POPUP = Sets selection and closes mega menu pop up.
+class.com.top_logic.layout.form.control.I18NConstants.UPDATE_IMAGE_COMMAND = Updates the image
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_COMPLETED_COMMAND = Upload completed callback
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL = Choose file
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL.tooltip = Opens the file chooser for uploading a file.
