Ticket #28892: fix camel case comment, wrong test order and add missing I18N

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -517,6 +517,8 @@ com.top_logic.model.search.expr.config.operations.EqualsUnversioned$Builder = Ba
 com.top_logic.model.search.expr.config.operations.EqualsUnversioned$Builder.tooltip = <i>Method builder</i> creating <i>equals unversioned</i>.
 com.top_logic.model.search.expr.config.operations.FilterBuilder = Filter-Bauer
 com.top_logic.model.search.expr.config.operations.FilterBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Filterausdrücken</i>.
+com.top_logic.model.search.expr.config.operations.FlatMap$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.FlatMap$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung <i>flacher</i> Abbildungen.
 com.top_logic.model.search.expr.config.operations.FlattenBuilder = Bauherr abflachen
 com.top_logic.model.search.expr.config.operations.FlattenBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Flatten-Ausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.ForeachBuilder = Foreach-Bauer
