--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -517,6 +517,8 @@ com.top_logic.model.search.expr.config.operations.EqualsUnversioned$Builder = Bu
 com.top_logic.model.search.expr.config.operations.EqualsUnversioned$Builder.tooltip = <i>Method builder</i> creating <i>equals unversioned</i>.
 com.top_logic.model.search.expr.config.operations.FilterBuilder = Filter builder
 com.top_logic.model.search.expr.config.operations.FilterBuilder.tooltip = <i>Method builder</i> creating <i>filter</i> expressions.
+com.top_logic.model.search.expr.config.operations.FlatMap$Builder = Builder
+com.top_logic.model.search.expr.config.operations.FlatMap$Builder.tooltip = <i>Method builder</i> creating <i>flat map</i> expressions.
 com.top_logic.model.search.expr.config.operations.FlattenBuilder = Flatten builder
 com.top_logic.model.search.expr.config.operations.FlattenBuilder.tooltip = <i>Method builder</i> creating <i>flatten</i> expressions.
 com.top_logic.model.search.expr.config.operations.ForeachBuilder = Foreach builder
