--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -131,7 +131,6 @@ class.com.top_logic.layout.form.control.I18NConstants.MEGAMENU_OPTION_SELECTED.h
 class.com.top_logic.layout.form.control.I18NConstants.OPEN_CLOCK_COMMAND = Opens a clock.
 class.com.top_logic.layout.form.control.I18NConstants.OPEN_MEGA_MENU = Opening the mega menu pop up.
 class.com.top_logic.layout.form.control.I18NConstants.SET_VALUE_CLOSE_POPUP = Sets selection and closes mega menu pop up.
-class.com.top_logic.layout.form.control.I18NConstants.UPDATE_IMAGE_COMMAND = Updates the image
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_COMPLETED_COMMAND = Upload completed callback
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_IMAGE_LABEL = Upload image
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_IMAGE_LABEL.tooltip = Opens the file chooser for uploading an image.
@@ -7397,15 +7396,15 @@ com.top_logic.model.annotate.security.TLRoleDefinitions.roles = Roles
 com.top_logic.model.annotate.security.TLRoleDefinitions.roles.tooltip = Roles defined by the annotated module.
 com.top_logic.model.annotate.security.TLRoleDefinitions.tooltip = <i>Module annotation</i> for defining roles in the context of a <i>module</i>.
 com.top_logic.model.annotate.ui.BinaryDisplay = Binary data display
-com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation = Presentation of the binary data
-com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation.tooltip = Display options for a binary data attribute.
+com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation = Binary presentation
+com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation.tooltip = Presentation / Display options for a binary attribute.
 com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM = Button with file list
-com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM.tooltip = Display as button to upload files and list of the uploaded files.
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM.tooltip = Display as button to upload files and a list of the uploaded files.
 com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD = Image drop field
 com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD.tooltip = Display as field to upload via click or drop and display of the uploaded image.
 com.top_logic.model.annotate.ui.BinaryDisplay.presentation = Presentation
 com.top_logic.model.annotate.ui.BinaryDisplay.presentation.tooltip = How to display this attribute by default.
-com.top_logic.model.annotate.ui.BinaryDisplay.tooltip = Display settings for an attribute, that contains binary data and allows the upload of files.
+com.top_logic.model.annotate.ui.BinaryDisplay.tooltip = Display settings for an attribute, that contains binary data and allows uploading of files. <p> This annotation is useful for attributes of type <i>binary data</i>. </p>
 com.top_logic.model.annotate.ui.BooleanDisplay = Boolean display
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation = Presentation
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation.tooltip = How to display this attribute by default.
