Ticket #28886: Produce an error, if a resolver is unable to resolve an ID.
Even if this might produce duplicate errors in case where a resolver
also logs the problem, it is necessary to generically handle this error.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -218,6 +218,7 @@ class.com.top_logic.model.instance.importer.I18NConstants.CANNOT_ASSIGN_PLAIN_VA
 class.com.top_logic.model.instance.importer.I18NConstants.ERROR_STORING_COLLECTION_TO_SINGLE_REF__ATTR_LOC = Es können nicht mehrere Werte in der Singleton-Referenz "{0}" bei {1} gespeichert werden.
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_SETTING_VALUE__VAL_ATTR_LOC_MSG = Der Wert "{0}" konnte nicht in das Attribut "{1}" gesetzt werden ({2}): {3}
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_IMPORT__ID_TYPE_MSG = Das Objekt mit der ID "{0}" vom Typ "{1}" konnte nicht importiert werden: {2}
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_OBJECT__TYPE_ID = Objekt vom Typ "{0}" mit ID "{1}" konnte nicht aufgelöst werden.
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_OBJECT__TYPE_ID_MSG = Das Objekt vom Typ "{0}" mit der ID "{1}" konnte nicht aufgelöst werden: {2}
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_VALUE__VAL_LOC_MSG = Der Wert "{0}" konnte nicht aufgelöst werden ({1}): {2}
 class.com.top_logic.model.instance.importer.I18NConstants.INVALID_BINARY_FORMAT__VAL_MSG = Ungültiges Binärformat in "{0}": {1}
