--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -218,6 +218,7 @@ class.com.top_logic.model.instance.importer.I18NConstants.CANNOT_ASSIGN_PLAIN_VA
 class.com.top_logic.model.instance.importer.I18NConstants.ERROR_STORING_COLLECTION_TO_SINGLE_REF__ATTR_LOC = Multiple values cannot be stored into singleton reference "{0}" at {1}.
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_SETTING_VALUE__VAL_ATTR_LOC_MSG = Failed to set value "{0}" to attribute "{1}" at {2}: {3}
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_IMPORT__ID_TYPE_MSG = Failed to import object with ID "{0}" of type "{1}": {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_OBJECT__TYPE_ID = Failed to resolve object of type "{0}" with ID "{1}".
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_OBJECT__TYPE_ID_MSG = Failed to resolve object of type "{0}" with ID "{1}": {2}
 class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_VALUE__VAL_LOC_MSG = "Failed to resolve value "{0}" at {1}: {2}
 class.com.top_logic.model.instance.importer.I18NConstants.INVALID_BINARY_FORMAT__VAL_MSG = Invalid binary format in "{0}": {1}
