Ticket #28886: Report error from TL-Script import function, if the import logs errors.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -24,6 +24,7 @@ class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERR
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Invalid content type "{0}" specified: {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Given content type "{0}" is not supported.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Failed to unzip data from "{0}": {1}
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE = Instance import of file "{0}" failed.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE_MSG = Instance import of file "{0}" failed: {1}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = The given commit number {1} must not be negative: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = The given revision is null in: {0}.
