--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -24,6 +24,7 @@ class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERR
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Ungültiger Inhaltstyp "{0}" angegeben: {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Der angegebene Inhaltstyp "{0}" wird nicht unterstützt.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Die Daten aus "{0}" konnten nicht entpackt werden: {1}
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE = Instanzimport der Datei "{0}" fehlgeschlagen.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE_MSG = Instanzimport der Datei "{0}" fehlgeschlagen: {1}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} darf nicht negativ sein: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = Die angegebene Revision ist null in: {0}.
