Ticket #28886: Provide better error messages for key attribute clashes.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -55,6 +55,7 @@ class.com.top_logic.model.search.providers.I18NConstants.ERROR_NO_TLOBJECT_FORM_
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_SCRIPT_DELIVERED_NO_RESULT_FOR_MANDATORY_ARRTIBUTE__ATTR_OBJ = Das Berechnungsergebnis des verpflichtenden Attributs "{0}" ist für das Objekt "{1}" leer.
 class.com.top_logic.model.search.providers.I18NConstants.EXECUTED_TABLE_COMMAND__LABEL = Tabellenbefehl ausgeführt: {0}
 class.com.top_logic.model.search.providers.I18NConstants.NEW_LINE = Neue Zeile
+class.com.top_logic.model.search.providers.I18NConstants.NON_UNIQUE_KEY__TYPE_ATTR_KEY_OBJ1_OBJ2 = Mehrere Instanzen des Typs {0} mit dem Wert "{1}" im Schlüsselattribut {2}: {3} und {4}
 class.com.top_logic.model.search.providers.I18NConstants.SCRIPT_TASK__TASK = Skriptaufgabe ausgeführt: {0}
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_EXECUTING_SEARCH__EXPR = Fehler beim Ausführen des Skripts.
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_NO_SEARCH_EXPRESSION = Es wurde keine Suchausdruck ausgewählt.
