--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -55,6 +55,7 @@ class.com.top_logic.model.search.providers.I18NConstants.ERROR_NO_TLOBJECT_FORM_
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_SCRIPT_DELIVERED_NO_RESULT_FOR_MANDATORY_ARRTIBUTE__ATTR_OBJ = The calculation result of the mandatory attribute "{0}" is empty for object "{1}".
 class.com.top_logic.model.search.providers.I18NConstants.EXECUTED_TABLE_COMMAND__LABEL = Executed table command: {0}
 class.com.top_logic.model.search.providers.I18NConstants.NEW_LINE = New row
+class.com.top_logic.model.search.providers.I18NConstants.NON_UNIQUE_KEY__TYPE_ATTR_KEY_OBJ1_OBJ2 = Multiple instances of type {0} with value "{1}" in key attribute {2}: {3} and {4}
 class.com.top_logic.model.search.providers.I18NConstants.SCRIPT_TASK__TASK = Executed script task: {0}
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_EXECUTING_SEARCH__EXPR = Error when executing the script.
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_NO_SEARCH_EXPRESSION = No search expression selected.
