Ticket #28760: Changed translations.

--- a/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
+++ b/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
@@ -1,6 +1,6 @@
 com.top_logic.services.jms.ibmmq.IBMMQClient = IBM MQ-Client
-com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect = Automatische Wiederverbindung
-com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect.tooltip = Ob die Anwendung versuchen soll die Verbindung automatisch wiederherzustellen.
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect = IBM Auto-Reconnect
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect.tooltip = Die Option zum Aktivieren der IBM-Auto-Reconnect-Funktion.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel = Kanal
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel.tooltip = Der Kanal der Ziel-Warteschlange.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.host = Host
@@ -12,7 +12,7 @@ com.top_logic.services.jms.ibmmq.IBMMQClient.Config.port.tooltip = Der Port der 
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager = Warteschlangenmanager
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager.tooltip = Der Warteschlangenmanager der Zielwarteschlange.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout = Wiederverbindungs Timeout
-com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout.tooltip = Die Zeit in Sekunden, für die versucht werden soll, die verlorene Verbindung zur IBM MQ wieder herzustellen.
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout.tooltip = Die Zeit im MillisFormat, für die der IBM-Auto-Reconnect versucht, die Verbindung wiederherzustellen.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user = Benutzer
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user.tooltip = Der Benutzername für die Anmeldung beim Nachrichtenwarteschlangen-Server.
 com.top_logic.services.jms.ibmmq.IBMMQClient.tooltip = Konfigurationsklasse für eine Verbindung zu einem IMB MQ-System.
