--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -11,6 +11,7 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_NO_N
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_NO_SUCH_NAMED_ARGUMENT__FUN_NAME_AVAIL = Kein solches benanntes Argument "{1}" in Funktion "{0}". Mögliche Argumente sind: {2}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_SINGLE_ARGUMENT_EXPECTED__CNT_EXPR = Es wird nur ein einziges Argument erwartet, aber es wurden {0} eingegeben: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_THREE_ARGUMENTS_EXPECTED__CNT_EXPR = Es wurden drei Argumente erwartet, aber {0} sind eingegangen: {1}
+class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TOO_MANY_LISTS__FUN_TRANSPOSE = Die angegebene Sammlung darf nicht mehr als 2 Listen enthalten, enthält jedoch {0}.\ 
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TWO_ARGUMENTS_EXPECTED__CNT_EXPR = Zwei Argumente werden erwartet, aber {0} wurden eingegeben: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEXPECTED_ARGUMENT__FUN_CNT = Unerwartete Anzahl von Argumenten beim Aufruf der Funktion "{0}", die Funktion erwartet nicht mehr als {1} Argumente.
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = Dem Parameter "{1}" der Funktion "{0}" wurde das falsche Argument übergeben. Es wurde ein Wert des Typs "{2}" erwartet, aber der Wert war: {3}
@@ -617,6 +618,8 @@ com.top_logic.model.search.expr.config.operations.ToList$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.ToList$Builder.tooltip = <i>Einfacher Methoden-Builder</i>, der <i>zur Liste</i> erstellt.
 com.top_logic.model.search.expr.config.operations.ToSet$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.ToSet$Builder.tooltip = <i>Einfacher Methoden-Builder</i>, der die <i>zu setzende</i><i>Methode</i> erstellt.
+com.top_logic.model.search.expr.config.operations.Transpose$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.Transpose$Builder.tooltip = <i>Einfacher Erbauer</i> einer <i>Methode</i> zur Erstellung einer <i>Transponierung</i>.
 com.top_logic.model.search.expr.config.operations.TwoArgsMethodBuilder = Erbauer einer Methode mit zwei Argumenten
 com.top_logic.model.search.expr.config.operations.TwoArgsMethodBuilder.tooltip = <i>Methodenerbauer</i> für Methoden mit zwei Argumenten.
 com.top_logic.model.search.expr.config.operations.Type$Builder = Erbauer
