Ticket #28893: update I18Ns

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -668,7 +668,7 @@ com.top_logic.model.search.expr.config.operations.binary.ZipEntry$Builder.toolti
 com.top_logic.model.search.expr.config.operations.cache.GroupBy$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.cache.GroupBy$Builder.tooltip = <i>Methodenersteller</i> erstellt <i>Gruppe nach</i>.
 com.top_logic.model.search.expr.config.operations.cache.IndexBy$Builder = Ersteller
-com.top_logic.model.search.expr.config.operations.cache.IndexBy$Builder.tooltip = <i>Methodenersteller</i> erstellt <i>Index durch</i>.
+com.top_logic.model.search.expr.config.operations.cache.IndexBy$Builder.tooltip = <i>Erbauer</i> einer <i>Methode</i> zur Erstellung eines <i>Index durch</i> Ausdrücke.
 com.top_logic.model.search.expr.config.operations.cache.IndexReduce$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.cache.IndexReduce$Builder.tooltip = <i>Methodenersteller</i> erstellt <i>Index reduzieren</i>.
 com.top_logic.model.search.expr.config.operations.cache.Preload$Builder = Erbauer
