--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -668,7 +668,7 @@ com.top_logic.model.search.expr.config.operations.binary.ZipEntry$Builder.toolti
 com.top_logic.model.search.expr.config.operations.cache.GroupBy$Builder = Builder
 com.top_logic.model.search.expr.config.operations.cache.GroupBy$Builder.tooltip = <i>Method builder</i> creating <i>group by</i>.
 com.top_logic.model.search.expr.config.operations.cache.IndexBy$Builder = Builder
-com.top_logic.model.search.expr.config.operations.cache.IndexBy$Builder.tooltip = <i>Method builder</i> creating <i>index by</i>.
+com.top_logic.model.search.expr.config.operations.cache.IndexBy$Builder.tooltip = <i>Method builder</i> creating <i>index by</i> expressions.
 com.top_logic.model.search.expr.config.operations.cache.IndexReduce$Builder = Builder
 com.top_logic.model.search.expr.config.operations.cache.IndexReduce$Builder.tooltip = <i>Method builder</i> creating <i>index reduce</i>.
 com.top_logic.model.search.expr.config.operations.cache.Preload$Builder = Builder
