Ticket #28765: Added paste image functionality.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -1353,6 +1353,7 @@ class.com.top_logic.layout.form.control.I18NConstants.TOGGLE_CALENDAR_VISIBILITY
 class.com.top_logic.layout.form.control.I18NConstants.TOGGLE_FORM_GROUP_COLLAPSE_STATE = Formulargruppe auf- / zuklappen
 class.com.top_logic.layout.form.control.I18NConstants.TOGGLE_TEXT_FIELD_MODE = Ansicht ändern
 class.com.top_logic.layout.form.control.I18NConstants.UPDATE_FILE_NAME = Datei hochladen
+class.com.top_logic.layout.form.control.I18NConstants.UPDATE_IMAGE_COMMAND = Bild aktualisieren
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_FAILED_FOLDER_DROP_NOT_SUPPORTED = Dieser Browser unterstützt keine drag and drop Upload mit Ordnern. Laden Sie die Datein einzeln hoch oder nutzen Sie einena anderen Browser.
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_FAILED_MAX_SIZE_EXCEEDED = Die maximale Größe von {0}b wurde überschritten. Laden Sie weniger Dateien gleichzeitig hoch oder wählen Sie kleinere Dateien.
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_FAILED_UNKNOWN_REASON = Der Upload ist auf Clientseite fehgeschlagen, jedoch kann die Nachricht nicht aufgelöst werden, da der key "{0} unbekannt ist.
