--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -1353,6 +1353,7 @@ class.com.top_logic.layout.form.control.I18NConstants.TOGGLE_CALENDAR_VISIBILITY
 class.com.top_logic.layout.form.control.I18NConstants.TOGGLE_FORM_GROUP_COLLAPSE_STATE = Toggle collapse state of form group
 class.com.top_logic.layout.form.control.I18NConstants.TOGGLE_TEXT_FIELD_MODE = Change view
 class.com.top_logic.layout.form.control.I18NConstants.UPDATE_FILE_NAME = Upload file
+class.com.top_logic.layout.form.control.I18NConstants.UPDATE_IMAGE_COMMAND = Update image
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_FAILED_FOLDER_DROP_NOT_SUPPORTED = This browser doesn't support drag and drop uploads of folders. Upload the files separately or use another browser.
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_FAILED_MAX_SIZE_EXCEEDED = The maximum size of {0}b was exceeded. Upload less files at the same time or choose smaller files.
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_FAILED_UNKNOWN_REASON = The upload failed on client side but the message can not be resolved because the key "{0}" is unknown.
