Ticket #28913: Allow to refer to the value context for identifying the root object.
This makes produced names much less dependent on the context data. This
allows for easier parameterization of scripts.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -2116,6 +2116,7 @@ com.top_logic.layout.scripting.recorder.ref.ModelNamingScheme$Config = Schema
 com.top_logic.layout.scripting.recorder.ref.NamedModelName = {name}
 com.top_logic.layout.scripting.recorder.ref.ResourceModelNaming$Name = Ressource mit Label '{label}'
 com.top_logic.layout.scripting.recorder.ref.SingletonNaming$Name = Singleton '{singleton-class}'
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$ComponentModel = Modell der Kontext-Componente{type ? {mit Typ '{type}'}}{id ? { mit ID '{id}'}}
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeName = Element '{root} {path ? { > {foreach(entry : path, " > ", {{$entry.node}})}'}}
 com.top_logic.layout.scripting.recorder.ref.TreeLabelPathNaming$TreeLabelPathName = {path ? {Element '{foreach(path, " > ")}'} : "ROOT"}
 com.top_logic.layout.scripting.recorder.ref.UniqueDownload = Download
