Ticket #28913: Allow to refer to the value context for identifying the root object.
This makes produced names much less dependent on the context data. This
allows for easier parameterization of scripts.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -4593,6 +4593,8 @@ com.top_logic.layout.scripting.recorder.ref.SingletonNaming$Name = Name
 com.top_logic.layout.scripting.recorder.ref.SingletonNaming$Name.tooltip = <i>Modellname</i> der <i>Singleton-Benennung</i>.
 com.top_logic.layout.scripting.recorder.ref.SingletonNaming.Name.singleton-class = Singleton-Klasse
 com.top_logic.layout.scripting.recorder.ref.SingletonNaming.Name.singleton-class.tooltip = Die Klasse des dargestellten Singuletts.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$ComponentModel = Komponenten-Modell
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$ComponentModel.tooltip = <i>Context-Resolver</i> für das Modell der Context-Komponente.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$Config = Konfiguration
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$Config.tooltip = Das <i>Konfigurationselement</i> für die <i>Benennung des Objektbaums</i>.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeName = Name des Objektbaums
@@ -4601,12 +4603,16 @@ com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeNamin
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeNamingTypeConfig.tooltip = Legt fest, dass für Instanzen eines bestimmten <i>Business-Objekttyps</i> ein nicht standardisierter <i>Etikettenanbieter</i> verwendet werden muss. <p> Dies gilt auch für Instanzen von Subtypen: Sie verwenden ebenfalls den konfigurierten <i>Label-Provider</i>. </p>
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeStep = Schritt Objektbaum
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeStep.tooltip = Ein Schritt in der <i>Objektbaumbezeichnung</i>.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.id = ID
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.id.tooltip = Eindeutiger Name des referenzierten Objekts. Falls festgelegt, wird er zur eindeutigen Identifizierung des Objekts verwendet.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.type = Typ
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.type.tooltip = Typ des referenzierten Modells. Falls festgelegt, wird es zur eindeutigen Identifizierung des Objekts verwendet.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.Config.types = Typen
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.Config.types.tooltip = Eine <i>Übersicht</i> über die Typen und den jeweils zu verwendenden <i>Etikettenanbieter</i>.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.path = Pfad
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.path.tooltip = Der <i>Objektbaumschrittpfad</i> zu dem identifizierten <i>Objekt</i>. <p> Der Pfad enthält nicht die Wurzel, da diese separat in <i>Root</i> referenziert wird. </p>
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.root = Wurzel
-com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.root.tooltip = Das <i>Stammobjekt</i>, von dem der <i>Pfad</i> ausgeht.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.root.tooltip = Das <i>Stammobjekt</i>, von dem der <i>Pfad</i> ausgeht. Wenn nicht angegeben, wird das Stammobjekt aus dem Wertekontext des Namens abgeleitet.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeNamingTypeConfig.label-provider = Anbieter von Etiketten
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeNamingTypeConfig.label-provider.tooltip = Der <i>Etikettenanbieter</i>, der für Instanzen dieses <i>Business-Objekttyps</i> verwendet werden soll.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeNamingTypeConfig.type = Typ
