--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -4593,6 +4593,8 @@ com.top_logic.layout.scripting.recorder.ref.SingletonNaming$Name = Name
 com.top_logic.layout.scripting.recorder.ref.SingletonNaming$Name.tooltip = <i>Model name</i> of the <i>singleton naming</i>.
 com.top_logic.layout.scripting.recorder.ref.SingletonNaming.Name.singleton-class = Singleton class
 com.top_logic.layout.scripting.recorder.ref.SingletonNaming.Name.singleton-class.tooltip = The class of the represented singleton.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$ComponentModel = Component model
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$ComponentModel.tooltip = <i>Context resolver</i> for the context component's model.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$Config = Configuration
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$Config.tooltip = The <i>configuration item</i> for the <i>object tree naming</i>.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeName = Object tree name
@@ -4601,12 +4603,16 @@ com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeNamin
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeNamingTypeConfig.tooltip = Defines that a non-standard <i>label provider</i> has to be used for instances of a given <i>business object type</i>. <p> This includes instances of subtypes: They use the configured <i>label provider</i>, too. </p>
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeStep = Object tree step
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming$TLObjectTreeStep.tooltip = One step in the <i>object tree name</i>.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.id = ID
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.id.tooltip = Unique name of the referenced object. If set, used to identify the object uniquely.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.type = Type
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.ComponentModel.Config.type.tooltip = Type of the referenced model. If set, used to identify object uniquely.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.Config.types = Types
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.Config.types.tooltip = A <i>map</i> of types and which <i>label provider</i> should be used for each of them.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.path = Path
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.path.tooltip = The <i>object tree step</i> path to the identified <i>object</i>. <p> The path does not contain the root, as that is referenced separately in <i>Root</i>. </p>
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.root = Root
-com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.root.tooltip = The root <i>object</i> from which the <i>Path</i> starts.
+com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeName.root.tooltip = The root <i>object</i> from which the <i>Path</i> starts. If not given, the root object is derived from the value context of the name.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeNamingTypeConfig.label-provider = Label provider
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeNamingTypeConfig.label-provider.tooltip = The <i>label provider</i> that should be used for instances of this <i>business object type</i>.
 com.top_logic.layout.scripting.recorder.ref.TLObjectTreeNaming.TLObjectTreeNamingTypeConfig.type = Type
