Ticket #28880: Migrate Try expression from GenericMethod to SearchExpression
- replace GenericMethod inheritance with direct SearchExpression
extension
- implement intuitive try syntax without dummy parameters
- add complete Visitor pattern support across all implementations
- update documentation and test script

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -288,7 +288,7 @@ com.top_logic.model.search.expr.ToUserCalendar$Builder.tooltip = <i>Method Build
 com.top_logic.model.search.expr.Traverse$Builder = Erbauer
 com.top_logic.model.search.expr.Traverse$Builder.tooltip = Fabrik für <i>Traverse-Methoden</i>.
 com.top_logic.model.search.expr.Try$Builder = Erbauer
-com.top_logic.model.search.expr.Try$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i>, der eine <i>Try-Funktion</i> erstellt.
+com.top_logic.model.search.expr.Try$Builder.tooltip = <i>Einfacher Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Try-Ausdrücken</i>.
 com.top_logic.model.search.expr.config.SearchBuilder = Suchausdruck-Generator
 com.top_logic.model.search.expr.config.SearchBuilder.Config.method-resolvers = Methodenauflöser
 com.top_logic.model.search.expr.config.SearchBuilder.Config.method-resolvers.tooltip = Auflöser für dynamisch definierte Methoden.
