--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -288,7 +288,7 @@ com.top_logic.model.search.expr.ToUserCalendar$Builder.tooltip = <i>Method build
 com.top_logic.model.search.expr.Traverse$Builder = Builder
 com.top_logic.model.search.expr.Traverse$Builder.tooltip = Factory for <i>traverse</i> methods.
 com.top_logic.model.search.expr.Try$Builder = Builder
-com.top_logic.model.search.expr.Try$Builder.tooltip = <i>Simple method builder</i> creating a <i>try</i> function.
+com.top_logic.model.search.expr.Try$Builder.tooltip = <i>Simple method builder</i> creating <i>try</i> expressions.
 com.top_logic.model.search.expr.config.SearchBuilder = Search builder
 com.top_logic.model.search.expr.config.SearchBuilder.Config.method-resolvers = Method resolvers
 com.top_logic.model.search.expr.config.SearchBuilder.Config.method-resolvers.tooltip = Resolvers for dynamically defined methods.
