--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -11,6 +11,7 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_NO_N
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_NO_SUCH_NAMED_ARGUMENT__FUN_NAME_AVAIL = No such named argument "{1}" in function "{0}". Possible arguments are: {2}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_SINGLE_ARGUMENT_EXPECTED__CNT_EXPR = Only a single argument is expected but got {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_THREE_ARGUMENTS_EXPECTED__CNT_EXPR = Three arguments expected but got {0} in: {1}
+class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TOO_MANY_LISTS__FUN_TRANSPOSE = The given collection must not contain more than 2 lists, but got {0}.
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TWO_ARGUMENTS_EXPECTED__CNT_EXPR = Two arguments expected but got {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEXPECTED_ARGUMENT__FUN_CNT = Unexpected number of arguments in call of function "{0}", the function expects no more than {1} arguments.
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = The wrong argument was passed to parameter "{1}" of function "{0}". A value of type "{2}" was expected, but the value was: {3}
