--- a/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
+++ b/tl-service-jms-ibmmq/src/main/java/META-INF/messages_de.properties
@@ -1,4 +1,6 @@
 com.top_logic.services.jms.ibmmq.IBMMQClient = IBM MQ-Client
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect = IBM Auto-Reconnect
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect.tooltip = Die Option zum Aktivieren der IBM-Auto-Reconnect-Funktion.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel = Kanal
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel.tooltip = Der Kanal der Ziel-Warteschlange.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.host = Host
@@ -9,6 +11,8 @@ com.top_logic.services.jms.ibmmq.IBMMQClient.Config.port = Port
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.port.tooltip = Der Port der Ziel-Warteschlange.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager = Warteschlangenmanager
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager.tooltip = Der Warteschlangenmanager der Zielwarteschlange.
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout = Wiederverbindungs Timeout
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout.tooltip = Die Zeit im <i>Millisekundenformat</i>, für die der IBM-Auto-Reconnect versucht, die Verbindung wiederherzustellen.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user = Benutzer
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user.tooltip = Der Benutzername für die Anmeldung beim Nachrichtenwarteschlangen-Server.
 com.top_logic.services.jms.ibmmq.IBMMQClient.tooltip = Konfigurationsklasse für eine Verbindung zu einem IMB MQ-System.
