--- a/tl-service-jms-ibmmq/src/main/java/META-INF/messages_en.properties
+++ b/tl-service-jms-ibmmq/src/main/java/META-INF/messages_en.properties
@@ -1,4 +1,6 @@
 com.top_logic.services.jms.ibmmq.IBMMQClient = IBMMQ client
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect = IBM auto-reconnect
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.auto-reconnect.tooltip = The Option to activate the IBM auto-reconnect.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel = Channel
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.channel.tooltip = The channel of the target queue.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.host = Host
@@ -9,6 +11,8 @@ com.top_logic.services.jms.ibmmq.IBMMQClient.Config.port = Port
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.port.tooltip = The port of the target queue.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager = Queue manager
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.queue-manager.tooltip = The queue manager of the target queue.
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout = Reconnect timeout
+com.top_logic.services.jms.ibmmq.IBMMQClient.Config.reconnect-timeout.tooltip = The time in <i>millisecond format</i> that the IBM auto-reconnect tries to reconnect for.
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user = User
 com.top_logic.services.jms.ibmmq.IBMMQClient.Config.user.tooltip = The user name to log in to the message queue server.
 com.top_logic.services.jms.ibmmq.IBMMQClient.tooltip = Configuration class for a connection to an IMB MQ System.
