Ticket #28765: Fixed warnings. Added demo-type and limit to label.
Restricted display in tables to DataItem.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/TL-DemoMessages_en.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/TL-DemoMessages_en.properties
@@ -410,6 +410,7 @@ layouts.layoutdemo.TestControlsForm_shared.main.imageDynamic = Dynamic image siz
 layouts.layoutdemo.TestControlsForm_shared.main.imageDynamic.tooltip = If checked, the width of the image is the same as its container.
 layouts.layoutdemo.TestControlsForm_shared.main.imageField = Example image field
 layouts.layoutdemo.TestControlsForm_shared.main.imageHeight = Height of the image
+layouts.layoutdemo.TestControlsForm_shared.main.imageUploadField = Example image upload field
 layouts.layoutdemo.TestControlsForm_shared.main.imageWidth = Width of the image
 layouts.layoutdemo.TestControlsForm_shared.main.jsp.checkAll = Check (ResKey)
 layouts.layoutdemo.TestControlsForm_shared.main.jsp.checkAll.tooltip = Checks all fields for validity (ResKey)
