--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.DemoTypes.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.DemoTypes.messages_de.properties
@@ -15,6 +15,7 @@ model.DemoTypes.DemoTime = DemoTime
 model.DemoTypes.DemoTypes.A = Demo A
 model.DemoTypes.DemoTypes.A.account = account
 model.DemoTypes.DemoTypes.A.binary = binary
+model.DemoTypes.DemoTypes.A.binary2 = binary2
 model.DemoTypes.DemoTypes.A.boolean = boolean
 model.DemoTypes.DemoTypes.A.booleanMandatory = booleanMandatory
 model.DemoTypes.DemoTypes.A.booleanMandatory.tooltip = Eine Check-Box, die entweder auf "explizit ja" (angehakt), oder "explizit nein" (explizit abgewählt) gesetzt werden muss. Der Initialzustand ist unentschieden (leer).
